# vaults

./: .gitignore  LICENSE  README.md
docs/: DEPLOYMENT.md  FEATURE-FLAGS.md  MICROSOFT_GRAPH_PERMISSIONS.md
vaults-function-app/: .gitignore  GlobalUsings.cs  VaultsFunctions.csproj  VaultsFunctions.sln  host.json  local.settings.example.json  openapi.yaml
vaults-function-app/Core/: Constants.cs  Program.cs
vaults-function-app/Core/Attributes/: RequiredScopeAttribute.cs
vaults-function-app/Core/Configuration/: FeatureFlags.cs
vaults-function-app/Core/Extensions/: HttpRequestDataExtensions.cs
vaults-function-app/Core/Helpers/: CorsHelper.cs
vaults-function-app/Core/Middleware/: AuthenticationMiddleware.cs  ErrorHandlingMiddleware.cs
vaults-function-app/Core/Models/: AiInteraction.cs  AuditPolicy.cs  ConversationThread.cs  (+5 more)
vaults-function-app/Functions/: DiagnosticFunctions.cs  HealthCheckFunction.cs  TestFunction.cs
vaults-function-app/Properties/: launchSettings.json
vaults-function-app/Tests/: VaultsFunctions.Tests.csproj
vaults-infrastructure/: README-template-files.md  apim-configuration.bicep  apim-openapi-spec.json  appServicePlan.bicep  appServicePlan.parameters.json  applicationInsights.bicep  backup-configuration.bicep  cosmosDb.bicep  cosmosDbRoleAssignment.bicep  cosmosDbSchema.bicep  functionApp.bicep  keyVault.bicep  keyVaultRoleAssignment.bicep  logAnalytics.bicep  main.bicep  managed-identity-permissions.bicep  monitoring-alerts.bicep  storageAccount.bicep  storageAccountRoleAssignment.bicep  virtualNetwork.bicep
vaults-mcp/: .env.example  .gitignore  Dockerfile  README.md  mcp-config.example.json  pyproject.toml  requirements.txt  validate_tools.py
vaults-mcp/src/: __init__.py  __main__.py  client.py  config.py  exceptions.py  server.py
vaults-mcp/src/tools/: __init__.py  admin_tools.py  conversation_tools.py  copilot_tools.py  export_tools.py  governance_tools.py  health_tools.py  metrics_tools.py  onboarding_tools.py  payment_tools.py
vaults-mcp/tests/: __init__.py  conftest.py  test_health_tools.py
(+46 files in other folders)
